--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   </style>
 </head>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.10.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
 <script type="text/javascript">
     document.addEventListener("DOMContentLoaded", function() {
 
